--- a/getting_started/01_ReadTables.ipynb
+++ b/getting_started/01_ReadTables.ipynb
@@ -3142,7 +3142,7 @@
    "metadata": {},
    "source": [
     "#### *__A Note on Column Names__*\n",
-    "Some entries in the LSST data release catalog as descibed by the __LSE_163__ are multi-dimensional; in the provided tables, we have flatten them. For example, the current LSST data model uses a 6x1 array to store `psFlux` for each of the six bands (ugrizy), in the provided `Object` table, we used `psFlux_u` to represent the `psFlux` measurement in the 'u' band. For the `lcPeriodic` and `lcNonPeriodic` columns, we used square brakets ('[ ]') to emphasize the index of the correpsoinding feature. "
+    "Some entries in the LSST data release catalog as described by the __LSE_163__ are multi-dimensional; in the provided tables, we have flatten them. For example, the current LSST data model uses a 6x1 array to store `psFlux` for each of the six bands (ugrizy), in the provided `Object` table, we used `psFlux_u` to represent the `psFlux` measurement in the 'u' band. For the `lcPeriodic` and `lcNonPeriodic` columns, we used square brackets ('[ ]') to emphasize the index of the corresponding feature. "
    ]
   },
   {
@@ -3279,9 +3279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3293,7 +3293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
