minor doc update

--- a/getting_started/05_Cutout.ipynb
+++ b/getting_started/05_Cutout.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "- Cutouts have 3 colors, 64 by 64 pixels.\n",
     "- Cutouts are stored in the 'cutouts' folder and stored as '{objectId}.npy'\n",
-    "- read with ```np.load(file_path)```"
+    "- read with ```np.load(file_path)```\n",
+    "\n",
+    "We thanks Lars Doorenbos for providing the code to make the thumbnails and Maurizio Paolillo for making the suggestion."
    ]
   },
   {
