--- a/getting_started/01_ReadTables.ipynb
+++ b/getting_started/01_ReadTables.ipynb
@@ -3279,9 +3279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AGN DC",
    "language": "python",
-   "name": "python3"
+   "name": "agndc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3293,7 +3293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
