--- a/getting_started/05_Cutout.ipynb
+++ b/getting_started/05_Cutout.ipynb
@@ -12,7 +12,7 @@
     "- Cutouts are stored in the 'cutouts' folder and stored as '{objectId}.npy'\n",
     "- read with ```np.load(file_path)```\n",
     "\n",
-    "We thanks Lars Doorenbos for providing the code to make the thumbnails and Maurizio Paolillo for making the suggestion."
+    "We thank Lars Doorenbos for providing the code to make the thumbnails and Maurizio Paolillo for making the suggestion."
    ]
   },
   {
