--- a/getting_started/05_Cutout.ipynb
+++ b/getting_started/05_Cutout.ipynb
@@ -2887,9 +2887,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "LSST_Train",
    "language": "python",
-   "name": "agndc"
+   "name": "lsst_train"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2901,7 +2901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
